# algolabra-harjoitustyo

./: README.md  pyproject.toml
dokumentaatio/: maarittelydokumentti.md  ohje.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: index.py  ratkaisuohjelma.py
src/tests/: ratkaisuohjelma_test.py
